# plannerarena

./: .Rbuildignore  .gitignore  .pre-commit-config.yaml  DESCRIPTION  Dockerfile  LICENSE  NAMESPACE  README.md  pyproject.toml  requirements.txt  shiny-server.conf
.github/workflows/: build_wheels.yml  ci-cd.yml
R/: app_config.R  app_server.R  app_ui.R  fct_widgets.R  mod_database_info.R  mod_performance.R  mod_progress.R  mod_regression.R  utils_database.R
dev/: 01_start.R  02_dev.R  03_deploy.R
inst/: golem-config.yml
inst/app/: cite.html  help.md
inst/app/www/: ga.js  plannerarena.css  plannerarena.js
man/: load_database.Rd
plannerarena/: app.py  database.py  performance.py  progress.py  regression.py  widgets.py
plannerarena/www/: help.md  plannerarena.css
